// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteCharactersContainer should match the snapshot with the correct data 1`] = `
<section
  id="favorite-characters"
>
  <h1
    className="fav_character-title"
  >
    Favorite Characters
  </h1>
  <Link
    to="/movies"
  >
    <img
      alt="back button"
      className="button__back"
      src="back.png"
    />
  </Link>
  <Character
    character={
      Object {
        "films": Array [
          "A Film",
          "Another Film",
          "And another",
        ],
        "homeworld": "Earth",
        "name": "A name",
        "population": "2000",
        "species": "human",
      }
    }
    key="0"
    updateFavorite={[MockFunction]}
  />
</section>
`;

exports[`FavoriteCharactersContainer should match the snapshot with the correct data 2`] = `
<section
  id="favorite-characters"
>
  <h1
    className="fav_character-title"
  >
    Favorite Characters
  </h1>
  <Link
    to="/movies"
  >
    <img
      alt="back button"
      className="button__back"
      src="back.png"
    />
  </Link>
  <h1>
    No Favorite Characters
  </h1>
</section>
`;
